# kotki

./: .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  Config.cmake.in  Dockerfile  MANIFEST.in  README.md  kotki.pc.in  setup.py
app/: CMakeLists.txt  kotki.cpp
bindings/python/: CMakeLists.txt  README.md  kotki-py.cpp  kotki-py.h
cmake/: DownloadAllTheThings.cmake  FindCcache.cmake  FindYamlCpp.cmake  Findrapidjson.cmake  GetVersionFromFile.cmake  armFlags.cmake  armFlags.py
debian/: changelog  control  rules
python/: README.md
python/kotki/: kotki-py.cpp  kotki-py.h
python/kotki_cli/: __init__.py
python/kotki_web/: run.py  settings.py
python/kotki_web/kweb/: __init__.py  constants.py  routes.py
python/kotki_web/kweb/static/: style.css
python/kotki_web/kweb/templates/: index.html
src/: CMakeLists.txt  README.md
src/.dev/: README.md  generate_ssplit_bundle.py  print.js  urls.js
src/demo/: kotki-bench.cpp  kotki-srt.cpp  kotki.cpp
src/kotki/: annotation.cpp  annotation.h  batch.cpp  batch.h  batching_pool.cpp  batching_pool.h  byte_array_util.cpp  byte_array_util.h  cache.h  definitions.h  kotki.cpp  kotki.h  lang.cpp  lang.h  nb_prefix.h  parser.cpp  parser.h  quality_estimator.cpp  quality_estimator.h  request.cpp  request.h  response.cpp  response.h  response_builder.cpp  response_builder.h  response_options.h  text_processor.cpp  text_processor.h  translation_model.cpp  translation_model.h  utils.h  xh_scanner.cpp
src/translator/: CMakeLists.txt  batch.cpp  batching_pool.cpp  byte_array_util.cpp  kotki.cpp  kotki.h  parser.cpp  quality_estimator.cpp  request.cpp  request.h  response_builder.cpp  response_builder.h  text_processor.cpp  text_processor.h  translation_model.cpp  translation_model.h
